[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-tour"
version = "0.1.0"
description = "Streamlit component that implement the wonderful Driver.js library. It allows you to start a tour that takes the user through the component that you want"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Malo", email = "malo.potereau@gmail.com" }]
dependencies = [
    "streamlit>=1.51",
]

[project.optional-dependencies]
devel = [
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
  "streamlit >= 1.51",  
]

[tool.setuptools.packages.find]
include = ["streamlit_tour*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
streamlit_tour = [
  "frontend/build/**/*", 
  "pyproject.toml"
  ]

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "streamlit>=1.55.0",
    "twine>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/mp-mech-ai/streamlit_tour"
Repository = "https://github.com/mp-mech-ai/streamlit_tour"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "streamlit_tour/pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
